--- a/tools/lkl/lib/Build
+++ b/tools/lkl/lib/Build
@@ -4,6 +4,7 @@ CFLAGS_virtio_net_vde.o += $(shell pkg-config --cflags vdeplug)
 lkl-y += fs.o
 lkl-y += iomem.o
 lkl-y += net.o
+lkl-y += jmp_buf.o
 lkl-$(CONFIG_AUTO_LKL_POSIX_HOST) += posix-host.o
 lkl-$(CONFIG_AUTO_LKL_NT_HOST) += nt-host.o
 lkl-y += utils.o
